--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ path = "all.rs"
 clap = { version = "4.5.21", features = ["derive"] }
 itertools = "0.13.0"
 lazy_static = "1.5.0"
+regex = "1.11.1"
